<resources>
    <string name="app_name">Let\'s Quiz</string>
    <string name="forget_password">Forget password ?</string>
    <string name="submit">SUBMIT</string>
    <string name="todo">TODO</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="register">Don\'t have an account? </string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_up">Sign Up</string>
    <string name="sign_in_text">Already have account? </string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>